replace all urls w/ ssl

--- a/app/views/email_layouts/_footer.text.erb
+++ b/app/views/email_layouts/_footer.text.erb
@@ -1,4 +1,4 @@
 
-Twitter: http://twitter.com/#!/Ben_Varim
-Facebook: http://www.facebook.com/BenVarim.Platformu
+Twitter: https://twitter.com/#!/Ben_Varim
+Facebook: https://www.facebook.com/BenVarim.Platformu
 Email: iletisim@benvarim.com
