--- a/app/views/email_layouts/_header.html.erb
+++ b/app/views/email_layouts/_header.html.erb
@@ -80,7 +80,7 @@ h6 a:visited { color: 777 !important; }
 		<table width="640" cellspacing="0" cellpadding="0" border="0" class="w640" style="width: 640px !important;"><tbody>
 <tr style="border-collapse: collapse;">
 <td width="640" height="20" class="w640" style="width: 300px !important; border-collapse: collapse;">
-				<img src="http://benvarim.com/images/v2/footer-logo.png" height="48px" width="159px" style="height: auto; line-height: 100%; outline: none; text-decoration: none; display: block; padding: 20px 0 10px;" title="benvarim.com">
+				<img src="https://www.benvarim.com/images/v2/footer-logo.png" height="48px" width="159px" style="height: auto; line-height: 100%; outline: none; text-decoration: none; display: block; padding: 20px 0 10px;" title="benvarim.com">
 </td>
 		</tr>
 <tr style="border-collapse: collapse;">
