--- a/app/views/home/bagis_sayfasi.html.erb
+++ b/app/views/home/bagis_sayfasi.html.erb
@@ -11,7 +11,7 @@
           <h6>Levent Bas</h6>
           
           <div class="share-options"> 
-            <a href="http://twitter.com/share" class="twitter-share-button" data-text="Twitter'da Paylaş" data-count="horizontal">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-text="Twitter'da Paylaş" data-count="horizontal">Tweet</a><script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
           </div>
         </div><!-- .comment-bubble -->
         
