--- a/app/views/home/includes/_faq.erb
+++ b/app/views/home/includes/_faq.erb
@@ -11,7 +11,7 @@
     <p>Türkiye Cumhuriyeti’nde yasal olarak kurulan tüm dernekler ve vakıflar BenVarım platformunu kullanarak sosyal sorumluluk projelerini tanıtabilir ve bunlar için bağış toplayabilir.</p>
 
     <h4>Çalışanı veya gönüllüsü olduğum STK’yı nasıl kayıt edebilirim?</h4>
-    <p><a title="Yeni Kurum Ekle" href="http://benvarim.com/kurum/yeni" target="_blank">Kurum kayıt</a> linkini takip ederek formu ve gerekli bilgileri doldurunuz. BenVarım yetkilileri en kısa zamanda sizinle iletisime geçerek güvenlik ve yasal sorgulamaları yapacaklar. Bu sırada sizden bazı dökümanları isteyeceğiz. Herşey yolunda giderse 2 gün içinde tüm işlemleri tamamlayabiliriz.</p>
+    <p><a title="Yeni Kurum Ekle" href="https://www.benvarim.com/kurum/yeni" target="_blank">Kurum kayıt</a> linkini takip ederek formu ve gerekli bilgileri doldurunuz. BenVarım yetkilileri en kısa zamanda sizinle iletisime geçerek güvenlik ve yasal sorgulamaları yapacaklar. Bu sırada sizden bazı dökümanları isteyeceğiz. Herşey yolunda giderse 2 gün içinde tüm işlemleri tamamlayabiliriz.</p>
 
 
     <h4>Benvarim.com’da yapılan bağışlar nereye gidiyor?</h4>
@@ -39,7 +39,7 @@
     <p>Benvarim.com, İstanbul, Ankara ve San Francisco’da yaşayan, geçmişinde yaklaşık otuz senelik sivil toplum deneyimi olan altı kişilik, mühendis, avukat, tasarımcı, mali müşavirlerden oluşan bir kadro tarafından hayata geçirilmiştir. Kurucular tamamen gönüllü olarak Benvarim.com’a emeklerini vermeye devam ediyorlar. Önümüzdeki yıllardan itibaren Benvarim.com ‘un profosyonel deneyimli yöneticiler tarafından yönetilmesi için çalışmalar yapılacaktır.</p>
 
     <h4>Benvarim.com ekibine nasıl katılabilirim?</h4>
-    <p>Kapımız sivil toplum projeleri ve internet girişimleri konusunda kendini geliştirmek isteyen herkese açık. Yetenekli, kendine güvenen, disiplinli ve topluma hizmet etmekten hoşlanan herkese ekipte bir iş var. Amacımız tüm Türkiye’ye hizmet etmek, bunun için çok çalışıyoruz. Projemizde bizimle beraber çalışanlar, başarılı bir girişimde hızla yol almanın keyfini de yaşayacaklar. <a href="http://benvarim.com/kariyer" target="_blank">Kariyer</a> bölümümüzü ziyaret edebilir veya bizimle kariyer@benvarim.com adresinden iletişim kurabilirsiniz.</p>
+    <p>Kapımız sivil toplum projeleri ve internet girişimleri konusunda kendini geliştirmek isteyen herkese açık. Yetenekli, kendine güvenen, disiplinli ve topluma hizmet etmekten hoşlanan herkese ekipte bir iş var. Amacımız tüm Türkiye’ye hizmet etmek, bunun için çok çalışıyoruz. Projemizde bizimle beraber çalışanlar, başarılı bir girişimde hızla yol almanın keyfini de yaşayacaklar. <a href="https://www.benvarim.com/kariyer" target="_blank">Kariyer</a> bölümümüzü ziyaret edebilir veya bizimle kariyer@benvarim.com adresinden iletişim kurabilirsiniz.</p>
 	</div><!-- #tabs-1 -->
 
 
@@ -91,7 +91,7 @@
 
     <a title="View BenVarım Platformu - Kurumsal Tanıtım Sunumu on Scribd" href="http://www.scribd.com/doc/62796024/BenVar%C4%B1m-Platformu-Kurumsal-Tan%C4%B1t%C4%B1m-Sunumu" style="display:none;">BenVarım Platformu - Kurumsal Tanıtım Sunumu</a>
 
-    <iframe class="scribd_iframe_embed" src="http://www.scribd.com/embeds/62796024/content?start_page=1&view_mode=slideshow&access_key=key-25d01dvpq73snhv947lr" data-auto-height="true" data-aspect-ratio="1.2938689217759" scrolling="no" id="doc_21769" width="100%" height="600px" frameborder="0"></iframe><script type="text/javascript">(function() { var scribd = document.createElement("script"); scribd.type = "text/javascript"; scribd.async = true; scribd.src = "http://www.scribd.com/javascripts/embed_code/inject.js"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(scribd, s); })();</script>
+    <iframe class="scribd_iframe_embed" src="https://www.scribd.com/embeds/62796024/content?start_page=1&view_mode=slideshow&access_key=key-25d01dvpq73snhv947lr" data-auto-height="true" data-aspect-ratio="1.2938689217759" scrolling="no" id="doc_21769" width="100%" height="600px" frameborder="0"></iframe><script type="text/javascript">(function() { var scribd = document.createElement("script"); scribd.type = "text/javascript"; scribd.async = true; scribd.src = "https://www.scribd.com/javascripts/embed_code/inject.js"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(scribd, s); })();</script>
 
 
 
