--- a/app/views/home/includes/_founders.erb
+++ b/app/views/home/includes/_founders.erb
@@ -152,10 +152,10 @@
      <p>Okul yılları ve sonrasında, çeşitli sivil toplum organizasyonlarında gönüllü ve yönetici olarak çalışan Levent'in, başarılı girişimleri arasında Boğaziçi Üniversitesi'nin ilk güneş enerjili aracının üretimi ve Türkiye'de ulusal çapta üniversite yelkenciliği sistemi ile yelken eğitim sisteminin kurulması vardır.</p>
      <p>Levent'in hem Türkiye'de, hem ABD'de sosyal projelerdeki çalışmaları, BenVarım projesinin çıkış noktası olmuştur. Kendisi, Boğaziçi Üniversitesi Makina Mühendisliği mezunu ve INSEAD MBA öğrencisidir.</p>
      <div class="p-other">
-       <a href="http://www.linkedin.com/in/leventbas" target="_blank" title="LinkedIn profilini görüntüle">
+       <a href="https://www.linkedin.com/in/leventbas" target="_blank" title="LinkedIn profilini görüntüle">
          <img src="/images/social_media_mini_icons/png/linkedin.png" />
        </a>
-       <a href="http://twitter.com/leventbas" target="_blank" title="Twitter profilini görüntüle">
+       <a href="https://twitter.com/leventbas" target="_blank" title="Twitter profilini görüntüle">
          <img src="/images/social_media_mini_icons/png/twitter.png" />
        </a>
        <a href="mailto:levent@benvarim.com" title="E-posta gönder">
@@ -187,13 +187,13 @@
     <p>Lise eğitimini Ankara Fen Lisesi'nde tamamlayan Yiğit, bu süreçte bilgisayar biliminde ciddi çalışmalar yapmış, ulusal ve uluslararası alanlarda çeşitli ödüller kazanmıştır. ODTÜ Bilgisayar Mühendisliği'ne başladıktan sonra web teknolojilerine yoğunlaşan Yiğit, ODTÜ Bilgisayar Topluluğu bünyesinde bir çok seminer vermiştir. 2006-2008 yılları arasında ODTÜ Verimlilik Topluluğu'nun yönetim kurulunda yer almaktadır.</p>
       <p>Aynı zamanda, STK'ların problemlerinin tespit ve çözümüne odaklı, ulusal bir vaka analizi yarışması olan Çözüm Sende'nin yaratıcılarındandır.</p>
     <div class="p-other">
-      <a href="http://www.linkedin.com/in/yigitboyar" target="_blank" title="LinkedIn profilini görüntüle">
+      <a href="https://www.linkedin.com/in/yigitboyar" target="_blank" title="LinkedIn profilini görüntüle">
         <img src="/images/social_media_mini_icons/png/linkedin.png" />
       </a>
-      <a href="http://twitter.com/yigitboyar" target="_blank" title="Twitter profilini görüntüle">
+      <a href="https://twitter.com/yigitboyar" target="_blank" title="Twitter profilini görüntüle">
         <img src="/images/social_media_mini_icons/png/twitter.png" />
       </a>
-      <a href="http://www.facebook.com/yigit.boyar" target="_blank" title="Facebook profilini görüntüle">
+      <a href="https://www.facebook.com/yigit.boyar" target="_blank" title="Facebook profilini görüntüle">
         <img src="/images/social_media_mini_icons/png/facebook.png" />
       </a>
       <a href="mailto:yigit@benvarim.com" title="E-posta gönder">
@@ -225,13 +225,13 @@
     <p>Sosyal sorumluluk projelerine erken yaşlarda başlayan Gerçek, lise yıllarında 2 kez <a href="http://www.hnmun.org/" target="_blank">Uluslararası Harvard Üniversitesi Model Birleşmiş Milletler Konferansı</a>'nda delege olarak yer aldı ve Avrupa Birliği tarafından ödüllendirilen <a href="http://www.gsl.gsu.edu.tr/history/" target="_blank">"Farklı tarihlerden ortak geleceğimize"</a> adlı projenin yöneticiliğini üstlendi. 2008 yılından beri Amerika'daki <a href="http://www.gsusaalumni.org/" target="_blank">Galatasaray Lisesi Mezunları Derneği</a>'nde Teknoloji Direktörü olarak görev yapmaktadır.</p>
       <p>Yaşamına Silikon Vadisi’nde devam etmekte ve <a href="http://www.redbeacon.com" target="_blank">Redbeacon</a>’da kullanılabilirlik ve tasarım (UX) mühendisi olarak çalışmaktadır. <a href="http://www.gercekkarakus.com" target="_blank">http://www.gercekkarakus.com</a></p>
     <div class="p-other">
-      <a href="http://www.linkedin.com/in/gercekkarakus" target="_blank" title="LinkedIn profilini görüntüle">
+      <a href="https://www.linkedin.com/in/gercekkarakus" target="_blank" title="LinkedIn profilini görüntüle">
         <img src="/images/social_media_mini_icons/png/linkedin.png" />
       </a>
-      <a href="http://twitter.com/gercheq" target="_blank" title="Twitter profilini görüntüle">
+      <a href="https://twitter.com/gercheq" target="_blank" title="Twitter profilini görüntüle">
         <img src="/images/social_media_mini_icons/png/twitter.png" />
       </a>
-      <a href="http://www.facebook.com/gercek.karakus" target="_blank" title="Facebook profilini görüntüle">
+      <a href="https://www.facebook.com/gercek.karakus" target="_blank" title="Facebook profilini görüntüle">
         <img src="/images/social_media_mini_icons/png/facebook.png" />
       </a>
       <a href="http://friendfeed.com/gercheq" target="_blank" title="Friendfeed profilini görüntüle">
@@ -292,16 +292,16 @@
   </div>
   <div class="pr-details">
     <p>BenVarım projesine gönüllü olarak İş Geliştirme ve Halkla İlişkiler konularında destek veren Melis, 1985 yılında İstanbul'da doğdu. Ortaokul ve liseyi Saint Michel Fransız Lisesi'nde tamamladıktan sonra, yüksek öğrenimine Boğaziçi Üniversitesi ile State University of New York' da devam ederek, Uluslararası İlişkiler (ana dal) ve Sosyoloji (yan dal) alanlarında çift diploma ile mezun oldu.</p>
-    <p>Sivil toplumun gerekliliğinin ve öneminin farkına erken öğrencilik yıllarında varan Melis, <a href="http://www.greenpeace.org/turkey/tr/" target="_blank">Greenpeace</a> ve <a href="http://benvarim.com/kurum//turkiye-egitim-gonulluleri-vakfi-tegv">Türkiye Eğitim Gönüllüleri Vakfı</a> gibi Türkiye'nin önde gelen sivil toplum kuruluşlarında gönüllü olarak çalışarak STK örgütlenmesi hakkında tecrübe edindi.  Bu tecrübenin sonucunda, mezuniyet sonrası New York'ta kar amacı gütmeyen bir kuruluş olan <a href="http://www.americanturkishsociety.org/" target="_blank">The American Turkish Society</a>'de yönetici asistanı ve program koordinatörü olarak kariyerine başladı.</p>
+    <p>Sivil toplumun gerekliliğinin ve öneminin farkına erken öğrencilik yıllarında varan Melis, <a href="http://www.greenpeace.org/turkey/tr/" target="_blank">Greenpeace</a> ve <a href="https://www.benvarim.com/kurum//turkiye-egitim-gonulluleri-vakfi-tegv">Türkiye Eğitim Gönüllüleri Vakfı</a> gibi Türkiye'nin önde gelen sivil toplum kuruluşlarında gönüllü olarak çalışarak STK örgütlenmesi hakkında tecrübe edindi.  Bu tecrübenin sonucunda, mezuniyet sonrası New York'ta kar amacı gütmeyen bir kuruluş olan <a href="http://www.americanturkishsociety.org/" target="_blank">The American Turkish Society</a>'de yönetici asistanı ve program koordinatörü olarak kariyerine başladı.</p>
     <p>Bugüne kadar edindiği bilgi ve tecrübeyi, Türkiye'nin teknolojiyi ve sosyal medyayı ön plana çıkartan ilk sosyal girişimi olan BenVarım'a aktarmakta ve bu yolla daha bilinçli bir toplumun oluşmasına katkıda bulunduğuna inanarak görevine devam etmektedir.</p>
     <div class="p-other">
-      <a href="http://www.linkedin.com/pub/melis-okan/18/587/b9b" target="_blank" title="LinkedIn profilini görüntüle">
+      <a href="https://www.linkedin.com/pub/melis-okan/18/587/b9b" target="_blank" title="LinkedIn profilini görüntüle">
         <img src="/images/social_media_mini_icons/png/linkedin.png" />
       </a>
-      <a href="http://twitter.com/melisokan" target="_blank" title="Twitter profilini görüntüle">
+      <a href="https://twitter.com/melisokan" target="_blank" title="Twitter profilini görüntüle">
         <img src="/images/social_media_mini_icons/png/twitter.png" />
       </a>
-      <a href="http://www.facebook.com/melis.okan" target="_blank" title="Facebook profilini görüntüle">
+      <a href="https://www.facebook.com/melis.okan" target="_blank" title="Facebook profilini görüntüle">
         <img src="/images/social_media_mini_icons/png/facebook.png" />
       </a>
       <a href="mailto:melis@benvarim.com" title="E-posta gönder">
@@ -341,10 +341,10 @@
 
 
     <div class="p-other">
-<a href="http://twitter.com/sukrubezen" target="_blank" title="Twitter profilini görüntüle">
+<a href="https://twitter.com/sukrubezen" target="_blank" title="Twitter profilini görüntüle">
         <img src="/images/social_media_mini_icons/png/twitter.png" />
       </a>
-      <a href="http://www.facebook.com/index.htmll" target="_blank" title="Facebook profilini görüntüle">
+      <a href="https://www.facebook.com/index.htmll" target="_blank" title="Facebook profilini görüntüle">
         <img src="/images/social_media_mini_icons/png/facebook.png" />
       </a>
       <a href="mailto:sukru@benvarim.com" title="E-posta gönder">
