--- a/app/views/home/paypal.html
+++ b/app/views/home/paypal.html
@@ -11,17 +11,17 @@
         	<td colspan="9">
                 <table width="800" cellpadding="0" cellspacing="0" border="0">
                     <tr>
-        				<td rowspan="3" style="width: 206px; height: 239px; background: url('http://benvarim.com/docs/paypal/img_vertical.jpg') no-repeat;"></td>
-                        <td colspan="2" style="text-align: right;"><a href="http://altfarm.mediaplex.com/ad/ck/3484-137347-12439-11"><img src="http://benvarim.com/docs/paypal/pplogo.jpg" border="0" width="200" height="61" alt="PayPal"/></a></td>
+        				<td rowspan="3" style="width: 206px; height: 239px; background: url('https://www.benvarim.com/docs/paypal/img_vertical.jpg') no-repeat;"></td>
+                        <td colspan="2" style="text-align: right;"><a href="http://altfarm.mediaplex.com/ad/ck/3484-137347-12439-11"><img src="https://www.benvarim.com/docs/paypal/pplogo.jpg" border="0" width="200" height="61" alt="PayPal"/></a></td>
         			</tr>
                     <tr>
-                    	<td style="width: 385px; height: 70px;"><img src="http://benvarim.com/docs/paypal/header_top.jpg" border="0"/></td>
-                        <td rowspan="2" style="width: 209px; height: 178px; background: url('http://benvarim.com/docs/paypal/discount_badge.jpg') no-repeat;">
-                          <a href="http://benvarim.com/?ref=paypal" style="display: block; height: 100%; width: 100%">&nbsp;</a>
+                    	<td style="width: 385px; height: 70px;"><img src="https://www.benvarim.com/docs/paypal/header_top.jpg" border="0"/></td>
+                        <td rowspan="2" style="width: 209px; height: 178px; background: url('https://www.benvarim.com/docs/paypal/discount_badge.jpg') no-repeat;">
+                          <a href="https://www.benvarim.com/?ref=paypal" style="display: block; height: 100%; width: 100%">&nbsp;</a>
                         </td>
                     </tr>
                     <tr>
-                        <td valign="top" style="width: 385px; height: 108px; vertical-align: top; background: url('http://benvarim.com/docs/paypal/head_txt_bg.jpg') no-repeat; font-family: Helvetica, Arial, sans-serif; font-weight: regular; font-size: 12px; color: #333333; text-align: left;">
+                        <td valign="top" style="width: 385px; height: 108px; vertical-align: top; background: url('https://www.benvarim.com/docs/paypal/head_txt_bg.jpg') no-repeat; font-family: Helvetica, Arial, sans-serif; font-weight: regular; font-size: 12px; color: #333333; text-align: left;">
                         <span style="margin-left: 15px; display: block">
                           <br/>BenVarim.com üzerinden, inandığınız vakıf ya da dernekler<br/>yararına bağış sayfanızı yaratıp Facebook ve Twitter gibi sosyal medya kanalları üzerinden çevrenizle paylaşın. Gelen bağışlar %100 güvenli olarak anında kurumun hesabına giderken siz de <a href="http://blog.benvarim.com/yeni-yil-hediyesi/?ref=paypal">daha iyi bir dünya yaratmanın keyfini yaşayın</a>.
                         </span>
@@ -32,17 +32,17 @@
         </tr>
         <tr>
         	<td width="20">&nbsp;</td>
-            <td width="370" colspan="3"><img src="http://benvarim.com/docs/paypal/top_outline_narrow.gif" border="0" /></td>
+            <td width="370" colspan="3"><img src="https://www.benvarim.com/docs/paypal/top_outline_narrow.gif" border="0" /></td>
             <td width="20">&nbsp;</td>
-            <td width="370" colspan="3"><img src="http://benvarim.com/docs/paypal/top_outline_narrow.gif" border="0" /></td>
+            <td width="370" colspan="3"><img src="https://www.benvarim.com/docs/paypal/top_outline_narrow.gif" border="0" /></td>
             <td width="20">&nbsp;</td>
         </tr>
         <tr>
         	<td width="20">&nbsp;</td>
-            <td width="1" style="background: #cccccc"><img src="http://benvarim.com/docs/paypal/spacer.gif" border="0" /></td>
+            <td width="1" style="background: #cccccc"><img src="https://www.benvarim.com/docs/paypal/spacer.gif" border="0" /></td>
             <td width="368" valign="top">
             	<table width="368" cellpadding="0" cellspacing="0" border="0">
-                	<tr><td colspan="3" height="30"><img src="http://benvarim.com/docs/paypal/phrase.jpg" alt="" border="0" /></td></tr>
+                	<tr><td colspan="3" height="30"><img src="https://www.benvarim.com/docs/paypal/phrase.jpg" alt="" border="0" /></td></tr>
             		<tr>
                     	<td width="20">&nbsp;</td>
                         <td width="328" style="font-size: 12px; color: #333333; font-family: Helvetica, Arial, sans-serif; font-weight: regular;">
@@ -54,20 +54,20 @@
 
                             <table>
                               <tr>
-                                <td><a target="_blank" href="http://benvarim.com/kurum/unicef-turkiye-milli-komitesi/?ref=paypal"><img src="http://benvarim.com/docs/paypal/logo_unicef.jpg" style="float:left; margin-right:20px;" /></a>
+                                <td><a target="_blank" href="https://www.benvarim.com/kurum/unicef-turkiye-milli-komitesi/?ref=paypal"><img src="https://www.benvarim.com/docs/paypal/logo_unicef.jpg" style="float:left; margin-right:20px;" /></a>
                                 </td>
                                 <td>
-                                  <a target="_blank" href="http://benvarim.com/kurum/unicef-turkiye-milli-komitesi/?ref=paypal"><span style="font-weight: bold; color: #003366; font-size: 12px">Unicef Türkiye Milli Komitesi</span></a><br/>Çocukların bedensel, zihinsel ve sosyal bakımdan gelişmeleri için sağlık, beslenme, eğitim, acil yardım, korunma, temiz bir ortamda yaşama haklarını desteklemeye var mısın?</td>
+                                  <a target="_blank" href="https://www.benvarim.com/kurum/unicef-turkiye-milli-komitesi/?ref=paypal"><span style="font-weight: bold; color: #003366; font-size: 12px">Unicef Türkiye Milli Komitesi</span></a><br/>Çocukların bedensel, zihinsel ve sosyal bakımdan gelişmeleri için sağlık, beslenme, eğitim, acil yardım, korunma, temiz bir ortamda yaşama haklarını desteklemeye var mısın?</td>
                               </tr>
 
                               <tr>
                                 <td>
-                                  <a target="_blank" href="http://benvarim.com/kurum/turkiye-egitim-gonulluleri-vakfi-tegv/?ref=paypal">
-                                    <img src="http://benvarim.com/docs/paypal/logo_tegev.jpg" style="float:left; margin-right:20px;" />
+                                  <a target="_blank" href="https://www.benvarim.com/kurum/turkiye-egitim-gonulluleri-vakfi-tegv/?ref=paypal">
+                                    <img src="https://www.benvarim.com/docs/paypal/logo_tegev.jpg" style="float:left; margin-right:20px;" />
                                   </a>
                                 </td>
                                 <td>
-                                  <a target="_blank" href="http://benvarim.com/kurum/turkiye-egitim-gonulluleri-vakfi-tegv/?ref=paypal"><span style="font-weight: bold; color: #003366; font-size: 12px">Türkiye Eğitim Gönüllüleri Vakfı</span></a><br/>
+                                  <a target="_blank" href="https://www.benvarim.com/kurum/turkiye-egitim-gonulluleri-vakfi-tegv/?ref=paypal"><span style="font-weight: bold; color: #003366; font-size: 12px">Türkiye Eğitim Gönüllüleri Vakfı</span></a><br/>
                                   Eğitim şart! Ülkemizdeki birçok sorunun temelinde eğitim yetersizliğinin bulunuyor. Çağdaş uygarlık seviyesine ulaşmak için eğitime destek olmaya var mısın?
 
                                 </td>
@@ -75,9 +75,9 @@
 
 
                               <tr>
-                                <td><a target="_blank" href="http://benvarim.com/kurum/bugday-ekolojik-yasami-destekleme-dernegi/?ref=paypal"><img src="http://benvarim.com/docs/paypal/logo_bugday.jpg" style="float:left; margin-right:20px;" /></a></td>
+                                <td><a target="_blank" href="https://www.benvarim.com/kurum/bugday-ekolojik-yasami-destekleme-dernegi/?ref=paypal"><img src="https://www.benvarim.com/docs/paypal/logo_bugday.jpg" style="float:left; margin-right:20px;" /></a></td>
                                 <td>
-                                  <a target="_blank" href="http://benvarim.com/kurum/bugday-ekolojik-yasami-destekleme-dernegi/?ref=paypal"><span style="font-weight: bold; color: #003366; font-size: 12px">Buğday Ekolojik Yaşamı Destekleme Derneği</span></a><br/>
+                                  <a target="_blank" href="https://www.benvarim.com/kurum/bugday-ekolojik-yasami-destekleme-dernegi/?ref=paypal"><span style="font-weight: bold; color: #003366; font-size: 12px">Buğday Ekolojik Yaşamı Destekleme Derneği</span></a><br/>
                                   Ekolojik dengelerin geri dönüşü olmayacak bir hızla bozulması ile ortaya çıkan sorunlara çözüm yolları sunmaya ve doğa ile uyumlu yaşamı desteklemeye var mısın?
 
                                 </td>
@@ -99,16 +99,16 @@
                     <tr><td colspan="3" height="20">&nbsp;</td></tr>
             	</table>
           </td>
-            <td width="1" style="background: #cccccc"><img src="http://benvarim.com/docs/paypal/spacer.gif" border="0" /></td>
+            <td width="1" style="background: #cccccc"><img src="https://www.benvarim.com/docs/paypal/spacer.gif" border="0" /></td>
             <td width="20">&nbsp;</td>
-            <td width="1" style="background: #cccccc"><img src="http://benvarim.com/docs/paypal/spacer.gif" border="0" /></td>
+            <td width="1" style="background: #cccccc"><img src="https://www.benvarim.com/docs/paypal/spacer.gif" border="0" /></td>
             <td width="368" valign="top">
             	<table width="368" cellpadding="0" cellspacing="0" border="0">
                 	<tr>
-                    	<td colspan="3"><img src="http://benvarim.com/docs/paypal/header2.jpg" border="0" /></td>
+                    	<td colspan="3"><img src="https://www.benvarim.com/docs/paypal/header2.jpg" border="0" /></td>
                     </tr>
                     <tr>
-                    	<td width="90" valign="top"><img src="http://benvarim.com/docs/paypal/icon1.jpg" border="0" /></td>
+                    	<td width="90" valign="top"><img src="https://www.benvarim.com/docs/paypal/icon1.jpg" border="0" /></td>
                         <td width="260">
                         	<span style="font-weight: bold; color: #003366; font-size: 12px">Güvenli!</span><br />Artık alışverişleriniz güvende. PayPal ile finansal  bilgilerinizi kimseyle paylaşmadan güvenle online alışveriş yapabilirsiniz.
                         </td>
@@ -116,7 +116,7 @@
                     </tr>
                     <tr><td colspan="3" height="10">&nbsp;</td></tr>
                     <tr>
-                    	<td width="90" valign="top"><img src="http://benvarim.com/docs/paypal/icon2.jpg" border="0" /></td>
+                    	<td width="90" valign="top"><img src="https://www.benvarim.com/docs/paypal/icon2.jpg" border="0" /></td>
                         <td width="260">
                         	<span style="font-weight: bold; color: #003366; font-size: 12px">Yerel!</span><br />PayPal Türkiye'de <a href="http://altfarm.mediaplex.com/ad/ck/3484-137347-12439-15" style="color: #003366">birçok e-ticaret sitesinde</a> geçerlidir. TL ile ödeme yapabilir, ihtiyaç duyduğunuzda Türkçe müşteri hizmetlerimizden yardım alabilirsiniz.
                         </td>
@@ -124,7 +124,7 @@
                     </tr>
                     <tr><td colspan="3" height="10">&nbsp;</td></tr>
                     <tr>
-                    	<td width="90" valign="top"><img src="http://benvarim.com/docs/paypal/icon3.jpg" border="0" /></td>
+                    	<td width="90" valign="top"><img src="https://www.benvarim.com/docs/paypal/icon3.jpg" border="0" /></td>
                         <td width="260">
                         	<span style="font-weight: bold; color: #003366; font-size: 12px">Kolay!</span><br />
                         	Güvenle ve yalnızca birkaç tıkla ödemelerinizi yapabilirsiniz. Kredi kartı bilgilerinizi her alışverişinizde girmek zorunda değilsiniz, PayPal hesabınıza giriş yapmanız ödemeyi tamamlamanız için yeterlidir.</td>
@@ -132,23 +132,23 @@
                     </tr>
                     <tr><td colspan="3" height="10">&nbsp;</td></tr>
                     <tr>
-                    	<td width="90" valign="top" style="text-align: right"><img src="http://benvarim.com/docs/paypal/video_icon.jpg" border="0" /></td>
+                    	<td width="90" valign="top" style="text-align: right"><img src="https://www.benvarim.com/docs/paypal/video_icon.jpg" border="0" /></td>
                     	<td width="260" valign="middle" height="20" style="text-align: left"><a href="http://altfarm.mediaplex.com/ad/ck/3484-137347-12439-14" style="color: #003366">Videomuzu izleyin</a></td>
                         <td width="18">&nbsp;</td>
                     </tr>
                     <tr>
-                    	<td colspan="3"><a href="http://altfarm.mediaplex.com/ad/ck/3484-137347-12439-16"><img src="http://benvarim.com/docs/paypal/btn1.jpg" border="0" /></a></td>
+                    	<td colspan="3"><a href="http://altfarm.mediaplex.com/ad/ck/3484-137347-12439-16"><img src="https://www.benvarim.com/docs/paypal/btn1.jpg" border="0" /></a></td>
                     </tr>
                 </table>
             </td>
-            <td width="1" style="background: #cccccc"><img src="http://benvarim.com/docs/paypal/spacer.gif" border="0" /></td>
+            <td width="1" style="background: #cccccc"><img src="https://www.benvarim.com/docs/paypal/spacer.gif" border="0" /></td>
             <td width="20">&nbsp;</td>
         </tr>
         <tr>
         	<td width="20">&nbsp;</td>
-            <td width="370" colspan="3"><img src="http://benvarim.com/docs/paypal/bottom_outline_narrow.gif" border="0" /></td>
+            <td width="370" colspan="3"><img src="https://www.benvarim.com/docs/paypal/bottom_outline_narrow.gif" border="0" /></td>
             <td width="20">&nbsp;</td>
-            <td width="370" colspan="3"><img src="http://benvarim.com/docs/paypal/bottom_outline_narrow.gif" border="0" /></td>
+            <td width="370" colspan="3"><img src="https://www.benvarim.com/docs/paypal/bottom_outline_narrow.gif" border="0" /></td>
             <td width="20">&nbsp;</td>
         </tr>
         <tr>
@@ -156,18 +156,18 @@
         </tr>
         <tr>
         	<td width="20">&nbsp;</td>
-            <td width="760" colspan="7"><img src="http://benvarim.com/docs/paypal/top_outline_wide.gif" border="0" /></td>
+            <td width="760" colspan="7"><img src="https://www.benvarim.com/docs/paypal/top_outline_wide.gif" border="0" /></td>
             <td width="20">&nbsp;</td>
         </tr>
         <tr>
         	<td width="20">&nbsp;</td>
-            <td width="1" style="background: #cccccc"><img src="http://benvarim.com/docs/paypal/spacer.gif" border="0" /></td>
+            <td width="1" style="background: #cccccc"><img src="https://www.benvarim.com/docs/paypal/spacer.gif" border="0" /></td>
             <td width="758" colspan="5">
             	<table width="758" cellpadding="0" cellspacing="0" border="0">
    	  				<tr height="130" valign="top">
-                    	<td width="190"><img src="http://benvarim.com/docs/paypal/stamp.gif" border="0" /></td>
+                    	<td width="190"><img src="https://www.benvarim.com/docs/paypal/stamp.gif" border="0" /></td>
                         <td width="550">
-                        <img src="http://benvarim.com/docs/paypal/header3.jpg" border="0" />
+                        <img src="https://www.benvarim.com/docs/paypal/header3.jpg" border="0" />
                         <br />Satın aldığınız maddi ürün size ulaşmazsa veya aldığınız ürün tanıtımından oldukça farklıysa tam para iadesi alabilirsiniz.*<br /><br /><a href="http://altfarm.mediaplex.com/ad/ck/3484-137347-12439-13" target="_blank" style="color: #003366">PayPal Alıcı Koruması ile ilgili daha fazla bilgi alın</a><br /><br />
 * <a href="http://altfarm.mediaplex.com/ad/ck/3484-137347-12439-12" style="color: #003366">Uygunluk koşullarını inceleyin</a>
                         </td>
@@ -175,12 +175,12 @@
                   	</tr>
                 </table>
             </td>
-            <td width="1" style="background: #cccccc"><img src="http://benvarim.com/docs/paypal/spacer.gif" border="0" /></td>
+            <td width="1" style="background: #cccccc"><img src="https://www.benvarim.com/docs/paypal/spacer.gif" border="0" /></td>
             <td width="20">&nbsp;</td>
         </tr>
         <tr>
         	<td width="20">&nbsp;</td>
-            <td width="760" colspan="7"><img src="http://benvarim.com/docs/paypal/bottom_outline_wide.gif" border="0" /></td>
+            <td width="760" colspan="7"><img src="https://www.benvarim.com/docs/paypal/bottom_outline_wide.gif" border="0" /></td>
             <td width="20">&nbsp;</td>
         </tr>
     </table>
