--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -94,19 +94,19 @@ Bv.Config = {
 <%= include_javascripts :workspace %>
 <%=raw get_buffered_output%>
 <!-- Share part -->
-<script src="http://connect.facebook.net/tr_TR/all.js#xfbml=1"></script>
-<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+<script src="https://connect.facebook.net/tr_TR/all.js#xfbml=1"></script>
+<script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
 
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js">
   {lang: 'tr'}
 </script>
-<script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share"></script>
-<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script src="https://static.ak.fbcdn.net/connect.php/js/FB.Share"></script>
+<script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
 <!-- end concatenated and minified scripts-->
 
 
 <!-- TypeKit - Styla -->
-<script type="text/javascript" src="http://use.typekit.com/tza2afe.js"></script>
+<script type="text/javascript" src="https://use.typekit.com/tza2afe.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
 <!-- asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet
