--- a/app/views/layouts/_sidebar.erb
+++ b/app/views/layouts/_sidebar.erb
@@ -44,7 +44,7 @@
       if (!jqueryLoaded) {
           var script = document.createElement('script');
           script.type = 'text/javascript';
-          script.src = 'http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js';
+          script.src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js';
           head.appendChild(script);
           if (script.readyState && script.onload!==null){
               script.onreadystatechange= function () {
@@ -54,7 +54,7 @@
       }
       var script = document.createElement('script');
       script.type = 'text/javascript';
-      script.src = 'http://downloads.mailchimp.com/js/jquery.form-n-validate.js';
+      script.src = 'https://downloads.mailchimp.com/js/jquery.form-n-validate.js';
       head.appendChild(script);
       var err_style = '';
       try{
@@ -208,7 +208,7 @@
   <div id="w-twitter" class="widget widget-dark">
     <div class="w-inner">
 
-      <script src="http://widgets.twimg.com/j/2/widget.js"></script>
+      <script src="https://widgets.twimg.com/j/2/widget.js"></script>
       <script>
       if(window.TWTR) {
         new TWTR.Widget({
@@ -248,7 +248,7 @@
   <div id="w-facebook" class="widget widget-dark">
     <div class="w-inner">
       <div style="background: #FFF">
-        <fb:like-box href="http://www.facebook.com/pages/Ben-Varim/135114429880530" width="260" show_faces="true" stream="false" header="false"></fb:like-box>
+        <fb:like-box href="https://www.facebook.com/pages/Ben-Varim/135114429880530" width="260" show_faces="true" stream="false" header="false"></fb:like-box>
         </div>
     </div>
   </div>
