--- a/app/views/organizations/includes/_share_options.erb
+++ b/app/views/organizations/includes/_share_options.erb
@@ -9,7 +9,7 @@ twitter_text = "Benvarım!" unless defined?(twitter_text)
 
     <li>
       <a
-        href="http://twitter.com/share?via=ben_varim"
+        href="https://twitter.com/share?via=ben_varim"
         class="twitter-share-button"
         data-count="horizontal"
         data-text="<%=twitter_text%>"
