--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -56,7 +56,7 @@
 
         <% if @organization.twitter_handle %>
           <p class="org-url outlink">
-            <%=link_to "Twitter: http://twitter.com/#{@organization.twitter_handle}", "http://twitter.com/#{@organization.twitter_handle}", :target => "_blank"%>
+            <%=link_to "Twitter: https://twitter.com/#{@organization.twitter_handle}", "https://twitter.com/#{@organization.twitter_handle}", :target => "_blank"%>
           </p>
         <% end %>
 
