--- a/app/views/pages/_share_large.erb
+++ b/app/views/pages/_share_large.erb
@@ -1,7 +1,7 @@
 <div class="share-options-large">
   <fb:like send="false" layout="box_count" width="60" show_faces="false" href="<%=url_for :only_path => false%>#fb"></fb:like>
 
-  <a href="http://twitter.com/share?via=ben_varim" class="twitter-share-button" data-count="vertical" data-text="<%= @page.title %>">Tweet</a>
+  <a href="https://twitter.com/share?via=ben_varim" class="twitter-share-button" data-count="vertical" data-text="<%= @page.title %>">Tweet</a>
 
   <g:plusone size="tall"></g:plusone>
 
