--- a/app/views/pages/_share_options.erb
+++ b/app/views/pages/_share_options.erb
@@ -2,7 +2,7 @@
 
 <div class="share-options">
   <ul class="clearfix">
-    <li><a href="http://twitter.com/share?via=ben_varim" class="twitter-share-button" data-count="horizontal" data-text="<%= @page.title %>">Tweet</a></li>
+    <li><a href="https://twitter.com/share?via=ben_varim" class="twitter-share-button" data-count="horizontal" data-text="<%= @page.title %>">Tweet</a></li>
     <li style="margin-right: 10px"><span  class='st_email_hcount' displayText='Email'></span></li>
     <li style="width:60px; margin-right: 10px"><g:plusone size="medium"></g:plusone></li>
     <% if @show_fb_like_send %>
