--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,10 +21,10 @@
               fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));</script>
 
-            <div class="fb-like-box" data-href="http://www.facebook.com/benvarim.platformu" data-width="300" data-show-faces="true" data-border-color="#EEE" data-stream="false" data-header="false"></div>
+            <div class="fb-like-box" data-href="https://www.facebook.com/benvarim.platformu" data-width="300" data-show-faces="true" data-border-color="#EEE" data-stream="false" data-header="false"></div>
 
 
-            <div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=116309391796241&amp;xfbml=1"></script><fb:signup-button show-faces="true" width="300" max-rows="2"></fb:signup-button>
+            <div id="fb-root"></div><script src="https://connect.facebook.net/en_US/all.js#appId=116309391796241&amp;xfbml=1"></script><fb:signup-button show-faces="true" width="300" max-rows="2"></fb:signup-button>
           </div>
           <div class="size1of2 lastUnit">
             <!-- <%=link_to "Log in with Facebook", user_omniauth_authorize_path(:facebook, :state => "popup"), :class => "popup", :"data-width" => 600, :"data-height" => 400 =%> -->
