--- a/app/views/email_layouts/_footer.html.erb
+++ b/app/views/email_layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 				</div> <!-- #content -->
 
 				<div align="left" id="content-footer">
-					Sevgiler,<br style="line-height: 100%;"><img src="http://benvarim.com/images/benvarim-platformu.png" width="177" height="24" style="padding-top: 5px; height: auto; line-height: 100%; outline: none; text-decoration: none; display: block;" title="BenVarım Platformu">
+					Sevgiler,<br style="line-height: 100%;"><img src="https://www.benvarim.com/images/benvarim-platformu.png" width="177" height="24" style="padding-top: 5px; height: auto; line-height: 100%; outline: none; text-decoration: none; display: block;" title="BenVarım Platformu">
 </div>
 <!-- #footer -->
 
@@ -26,10 +26,10 @@
             <table cellpadding="0" cellspacing="0" style=" width: 580px; margin:0;" >
               <tr>
                 <td style="font-size: 14px;  height: 16px !important;">
-                  <p style="padding: 10px 0"><img src="http://benvarim.com/images/social_media_mini_icons/png/facebook.png" style="display: inline-block; margin-right: 5px; line-height: 16px; vertical-align: top; font-size: 14px; height: auto; outline: none; text-decoration: none;"><a href="http://www.facebook.com/BenVarim.Platformu" style="color: #318FD1; text-decoration: none; font-weight: bold;">Facebook'ta beğen: BenVarım Platformu</a></p>
+                  <p style="padding: 10px 0"><img src="https://www.benvarim.com/images/social_media_mini_icons/png/facebook.png" style="display: inline-block; margin-right: 5px; line-height: 16px; vertical-align: top; font-size: 14px; height: auto; outline: none; text-decoration: none;"><a href="https://www.facebook.com/BenVarim.Platformu" style="color: #318FD1; text-decoration: none; font-weight: bold;">Facebook'ta beğen: BenVarım Platformu</a></p>
                 </td>
                 <td style="font-size: 14px;  height: 16px !important;">
-                  <p style="padding: 10px 0"><img src="http://benvarim.com/images/social_media_mini_icons/png/twitter.png" style="display: inline-block; margin-right: 5px; line-height: 16px; vertical-align: top; height: auto; outline: none; text-decoration: none;"><a href="http://twitter.com/Ben_Varim" style="color: #318FD1; text-decoration: none; font-weight: bold;">Twitter'da takip et: @Ben_Varim</a></p>
+                  <p style="padding: 10px 0"><img src="https://www.benvarim.com/images/social_media_mini_icons/png/twitter.png" style="display: inline-block; margin-right: 5px; line-height: 16px; vertical-align: top; height: auto; outline: none; text-decoration: none;"><a href="https://twitter.com/Ben_Varim" style="color: #318FD1; text-decoration: none; font-weight: bold;">Twitter'da takip et: @Ben_Varim</a></p>
                 </td>
               </tr>
             </table>
@@ -59,8 +59,8 @@
 		</tr>
 <tr style="border-collapse: collapse;">
 <td width="640" height="60" class="w640" style="text-align: center; font-size: 13px; width: 300px !important; border-collapse: collapse;" align="center">
-	      <a href="http://benvarim.com" target="_blank" style="color: #0862a2;">http://benvarim.com</a><br style="line-height: 100%;"><p>Daha iyi yarınlar yaratmak adına gösterdiğin çaba için teşekkür ederiz.</p>
-	      <p><a href="http://benvarim.com/guvenli_odeme" target="_blank" style="color: #0862a2;">%100 Güvenli Ödeme Sistemi</a> | <a href="http://benvarim.com/sik_sorulan_sorular" target="_blank" style="color: #0862a2;">Sık sorulan sorular</a> | <a href="http://benvarim.com/gizlilik_politikasi" target="_blank" style="color: #0862a2;">Gizlilik Politikası</a> | <a href="http://benvarim.com/iletisim/yeni" target="_blank" style="color: #0862a2;">Bize ulaşın</a></p>
+	      <a href="https://www.benvarim.com" target="_blank" style="color: #0862a2;">https://www.benvarim.com</a><br style="line-height: 100%;"><p>Daha iyi yarınlar yaratmak adına gösterdiğin çaba için teşekkür ederiz.</p>
+	      <p><a href="https://www.benvarim.com/guvenli_odeme" target="_blank" style="color: #0862a2;">%100 Güvenli Ödeme Sistemi</a> | <a href="https://www.benvarim.com/sik_sorulan_sorular" target="_blank" style="color: #0862a2;">Sık sorulan sorular</a> | <a href="https://www.benvarim.com/gizlilik_politikasi" target="_blank" style="color: #0862a2;">Gizlilik Politikası</a> | <a href="https://www.benvarim.com/iletisim/yeni" target="_blank" style="color: #0862a2;">Bize ulaşın</a></p>
         <p><br style="line-height: 100%;"></p>
 	    </td>
 		</tr>
