--- a/app/views/home/index_old.html.erb
+++ b/app/views/home/index_old.html.erb
@@ -58,13 +58,13 @@
 <div class="widget widget-light clearfix" id="featured-charities">
     <div class="w-inner">
       <div class="w-title">Destekleyebileceğiniz Kurumlar</div>
-      <a href="http://benvarim.com/kurum/unicef-turkiye-milli-komitesi" id="fc-unicef" title="UNICEF Türkiye Milli Komitesi">UNICEF Türkiye Milli Komitesi</a>
-      <a href="http://benvarim.com/kurum/nesin-vakfi" id="fc-nesin" title="Nesin Vakfı">Nesin Vakfı</a>
-      <a href="http://benvarim.com/kurum/ormana-kalkinma-ve-yardimlasma-vakfi" id="fc-ormana" title="Ormana Vakfı">Ormana Vakfı</a>
+      <a href="https://www.benvarim.com/kurum/unicef-turkiye-milli-komitesi" id="fc-unicef" title="UNICEF Türkiye Milli Komitesi">UNICEF Türkiye Milli Komitesi</a>
+      <a href="https://www.benvarim.com/kurum/nesin-vakfi" id="fc-nesin" title="Nesin Vakfı">Nesin Vakfı</a>
+      <a href="https://www.benvarim.com/kurum/ormana-kalkinma-ve-yardimlasma-vakfi" id="fc-ormana" title="Ormana Vakfı">Ormana Vakfı</a>
       <!--
-      <a href="http://benvarim.com/kurum/cagdas-yasami-destekleme-dernegi" id="fc-cydd" class="fc-default" title="Çağdaş Yaşamı Destekleme Derneği">Çağdaş Yaşamı Destekleme Derneği</a>
+      <a href="https://www.benvarim.com/kurum/cagdas-yasami-destekleme-dernegi" id="fc-cydd" class="fc-default" title="Çağdaş Yaşamı Destekleme Derneği">Çağdaş Yaşamı Destekleme Derneği</a>
       -->
-      <a href="http://benvarim.com/kurum/turkish-educational-foundation-abd" id="fc-tef" class="fc-default" title="Turkish Educational Foundation">Turkish Educational Foundation</a>
+      <a href="https://www.benvarim.com/kurum/turkish-educational-foundation-abd" id="fc-tef" class="fc-default" title="Turkish Educational Foundation">Turkish Educational Foundation</a>
       <a href="/kurum/yeni" id="fc-item" class="fc-default" title="Yeni Vakıf ve Dernek Kaydı">Yeni Vakıf ve Dernek Kaydı</a>
       <!--
         <a href="#" id="fc-tema" class="opaque" title="TEMA">TEMA</a>
