--- a/app/views/layouts/_like_link.text.erb
+++ b/app/views/layouts/_like_link.text.erb
@@ -1,1 +1,1 @@
-<%=text%> http://www.facebook.com/plugins/like.php?href=<%=url%>%23fb&amp;layout=standard&amp;show_faces=true&amp;width=450&amp;action=like&amp;colorscheme=light&amp;height=80
+<%=text%> https://www.facebook.com/plugins/like.php?href=<%=url%>%23fb&amp;layout=standard&amp;show_faces=true&amp;width=450&amp;action=like&amp;colorscheme=light&amp;height=80
