--- a/public/stylesheets/login-registration.css
+++ b/public/stylesheets/login-registration.css
@@ -3,7 +3,7 @@
    <div class="line">
      <div class="size1of2">
        <div id="fb-root"></div>
-       <script src="http://connect.facebook.net/en_US/all.js#appId=116309391796241&amp;xfbml=1"></script>
+       <script src="https://connect.facebook.net/en_US/all.js#appId=116309391796241&amp;xfbml=1"></script>
        <fb:signup-button show-faces="true" width="300" max-rows="2"></fb:signup-button>
      </div>
      <div class="size1of2 lastUnit">
