--- a/app/views/home/includes/_faq.erb
+++ b/app/views/home/includes/_faq.erb
@@ -89,7 +89,7 @@
     <h4>Neden kurumların kaydı için belge istiyorsunuz?</h4>
     <p>Türkiye’deki yasal mevzuat zaten bizi bu konuda dikkatli olmamız için zorluyor. Benvarim.com’u kullanacak tüm kurumlardan, tüzel kişiliklerini, projelerini ve banka hesap numaralarını kanıtlayacak belgeleri talep ediyoruz. Bu dikkatimiz, hem yasalara uymamız gereğinden, hem de bağışçı ile kurumları korumak gibi bir görevimiz olmasından kaynaklanıyor.</p>
 
-    <a title="View BenVarım Platformu - Kurumsal Tanıtım Sunumu on Scribd" href="http://www.scribd.com/doc/62796024/BenVar%C4%B1m-Platformu-Kurumsal-Tan%C4%B1t%C4%B1m-Sunumu" style="display:none;">BenVarım Platformu - Kurumsal Tanıtım Sunumu</a>
+    <a title="View BenVarım Platformu - Kurumsal Tanıtım Sunumu on Scribd" href="https://www.scribd.com/doc/62796024/BenVar%C4%B1m-Platformu-Kurumsal-Tan%C4%B1t%C4%B1m-Sunumu" style="display:none;">BenVarım Platformu - Kurumsal Tanıtım Sunumu</a>
 
     <iframe class="scribd_iframe_embed" src="https://www.scribd.com/embeds/62796024/content?start_page=1&view_mode=slideshow&access_key=key-25d01dvpq73snhv947lr" data-auto-height="true" data-aspect-ratio="1.2938689217759" scrolling="no" id="doc_21769" width="100%" height="600px" frameborder="0"></iframe><script type="text/javascript">(function() { var scribd = document.createElement("script"); scribd.type = "text/javascript"; scribd.async = true; scribd.src = "https://www.scribd.com/javascripts/embed_code/inject.js"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(scribd, s); })();</script>
 
