try loading fb share from localhost

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -100,7 +100,7 @@ Bv.Config = {
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js">
   {lang: 'tr'}
 </script>
-<script src="https://static.ak.fbcdn.net/connect.php/js/FB.Share"></script>
+<script src="/javascripts/fb.share.js"></script>
 <script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
 <!-- end concatenated and minified scripts-->
 
