--- a/app/views/layouts/_mailchimp.erb
+++ b/app/views/layouts/_mailchimp.erb
@@ -40,7 +40,7 @@ if (!jqueryLoaded) {
 }
 var script = document.createElement('script');
 script.type = 'text/javascript';
-script.src = 'http://downloads.mailchimp.com/js/jquery.form-n-validate.js';
+script.src = 'https://www.benvarim.com/javascripts/mailchimp.jquery.form-n-validate.js';
 head.appendChild(script);
 var err_style = '';
 try{
