--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -43,7 +43,7 @@
               <li><%=link_to "Kurumlar", :all_organizations %></li>
               <li><%=link_to "Projeler", :projects %></li>
               <li><%=link_to "Sayfalar", :all_pages %></li>
-              <li><%=link_to "Site Haritası", :sitemap %></a></li>
+              <li><%=link_to "Site Haritası", :sitemap %></li>
             </ul>
           </div>
         </div>
